app-a/ch05/ingress/external-echoserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echoserver
  namespace: external
spec:
  type: ClusterIP
  selector:
    run: nginx
  ports:
  - port: 8080
    targetPort: 8080
